Finalizando de vez.

--- a/Lab_04_RI.ipynb
+++ b/Lab_04_RI.ipynb
@@ -19,7 +19,7 @@
       "metadata": {
         "id": "ExL1mOdL3H4S",
         "colab_type": "code",
-        "outputId": "7243dfbd-03fa-4f95-e767-9f25547b5e97",
+        "outputId": "0441e4b1-654e-4895-802f-ab900a1f4e3a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 255
@@ -57,7 +57,7 @@
             "[nltk_data]   Unzipping stemmers/rslp.zip.\n",
             "Collecting memory_profiler\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/9f/fe/1fca7273dd111108f204a686b12a12b6422d405fe4614087aa7d5a66ea87/memory_profiler-0.55.0.tar.gz (40kB)\n",
-            "\u001b[K     |████████████████████████████████| 40kB 3.2MB/s \n",
+            "\u001b[K     |████████████████████████████████| 40kB 5.1MB/s \n",
             "\u001b[?25hRequirement already satisfied: psutil in /usr/local/lib/python3.6/dist-packages (from memory_profiler) (5.4.8)\n",
             "Building wheels for collected packages: memory-profiler\n",
             "  Building wheel for memory-profiler (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
@@ -125,7 +125,7 @@
       },
       "source": [
         "stopwords = stopwords.words(\"portuguese\")\n",
-        "tokenizador = RegexpTokenizer(r'\\b[A-zÀ-ú\\d\\-\\']+')\n",
+        "tokenizador = RegexpTokenizer(r'([A-Za-zÁáÉéÍíÓóÚúÃãÕõÇçÂâÊê]{3,27})')\n",
         "indices = {}\n",
         "n = 0\n",
         "\n",
@@ -195,7 +195,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 187
         },
-        "outputId": "57a4a403-936a-4ede-b0c4-7adcd1c63e4d"
+        "outputId": "51e61e09-c905-476f-c1c6-e2d6bc5fa27d"
       },
       "source": [
         "# Funcao que implementa a consulta documento-por-vez\n",
@@ -253,7 +253,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 187
         },
-        "outputId": "9af9edb0-d2f9-4326-87d3-b1ed2df10eac"
+        "outputId": "9b691217-65f0-4ad3-cb35-746b70d17547"
       },
       "source": [
         "# Funcao que implementa a consulta termo-por-vez    \n",
@@ -359,7 +359,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "b666f470-69d5-4f34-e87c-6c8fa8d60cac"
+        "outputId": "8da8cbf3-e35b-4aea-df45-579e44907217"
       },
       "source": [
         "# Criando e imprimindo a tabela com os dados dos documentos\n",
@@ -406,8 +406,8 @@
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>presidente</td>\n",
-              "      <td>[(20, 16), (13, 140), (9, 138), (9, 130), (9, ...</td>\n",
-              "      <td>[(20, 16), (13, 140), (9, 138), (9, 130), (9, ...</td>\n",
+              "      <td>[(21, 16), (13, 140), (11, 138), (10, 100), (1...</td>\n",
+              "      <td>[(21, 16), (13, 140), (11, 138), (10, 100), (1...</td>\n",
               "      <td>True</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -444,14 +444,14 @@
             ],
             "text/plain": [
               "       consulta                                  documento_por_vez  \\\n",
-              "1    presidente  [(20, 16), (13, 140), (9, 138), (9, 130), (9, ...   \n",
+              "1    presidente  [(21, 16), (13, 140), (11, 138), (10, 100), (1...   \n",
               "2      educação  [(9, 218), (3, 195), (2, 177), (2, 89), (1, 25...   \n",
               "3  privatização  [(1, 245), (1, 221), (1, 204), (1, 184), (1, 62)]   \n",
               "4       empresa  [(10, 177), (9, 107), (6, 262), (4, 95), (3, 2...   \n",
               "5     bolsonaro  [(24, 100), (18, 70), (16, 66), (14, 252), (11...   \n",
               "\n",
               "                                       termo_por_vez  comparacao  \n",
-              "1  [(20, 16), (13, 140), (9, 138), (9, 130), (9, ...        True  \n",
+              "1  [(21, 16), (13, 140), (11, 138), (10, 100), (1...        True  \n",
               "2  [(9, 218), (3, 195), (2, 177), (2, 89), (1, 25...        True  \n",
               "3  [(1, 245), (1, 221), (1, 204), (1, 184), (1, 62)]        True  \n",
               "4  [(10, 177), (9, 107), (6, 262), (4, 95), (3, 2...        True  \n",
@@ -474,7 +474,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "265a0fae-065e-4e60-a7a6-5d254e3880a7"
+        "outputId": "7a020733-e8a3-499e-b5d0-9864445fb67e"
       },
       "source": [
         "# Comparando os tempos medios de de execucao\n",
@@ -516,28 +516,28 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>0.002819</td>\n",
-              "      <td>0.000161</td>\n",
+              "      <td>0.002077</td>\n",
+              "      <td>0.000160</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>0.001029</td>\n",
-              "      <td>0.000039</td>\n",
+              "      <td>0.000437</td>\n",
+              "      <td>0.000031</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>0.000175</td>\n",
+              "      <td>0.000134</td>\n",
               "      <td>0.000007</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>0.000740</td>\n",
-              "      <td>0.000036</td>\n",
+              "      <td>0.000468</td>\n",
+              "      <td>0.000034</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>5</th>\n",
-              "      <td>0.002939</td>\n",
-              "      <td>0.000138</td>\n",
+              "      <td>0.001894</td>\n",
+              "      <td>0.000192</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -545,11 +545,11 @@
             ],
             "text/plain": [
               "   tempo_médio_documento_por_vez  tempo_médio_termo_por_vez\n",
-              "1                       0.002819                   0.000161\n",
-              "2                       0.001029                   0.000039\n",
-              "3                       0.000175                   0.000007\n",
-              "4                       0.000740                   0.000036\n",
-              "5                       0.002939                   0.000138"
+              "1                       0.002077                   0.000160\n",
+              "2                       0.000437                   0.000031\n",
+              "3                       0.000134                   0.000007\n",
+              "4                       0.000468                   0.000034\n",
+              "5                       0.001894                   0.000192"
             ]
           },
           "metadata": {
@@ -568,7 +568,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 102
         },
-        "outputId": "865e95c1-2cc8-4653-91c0-f3ad5165bf80"
+        "outputId": "148ce1a4-e11d-4446-bdd4-cac87c88a14e"
       },
       "source": [
         "# Comparando o uso de memória\n",
@@ -585,10 +585,10 @@
           "output_type": "stream",
           "text": [
             "Uso de memória em Documento Por Vez:\n",
-            "peak memory: 236.63 MiB, increment: 0.05 MiB\n",
+            "peak memory: 235.73 MiB, increment: 0.08 MiB\n",
             " \n",
             "Uso de memória em Termo Por Vez:\n",
-            "peak memory: 236.63 MiB, increment: 0.00 MiB\n"
+            "peak memory: 235.73 MiB, increment: 0.00 MiB\n"
           ],
           "name": "stdout"
         }
@@ -630,15 +630,15 @@
         "\n",
         "def consulta_and(consulta, indices, k):\n",
         "  \n",
-        "  indices_consulta = [] # Array\n",
-        "  ranking = [] # HeapQueue, implementation of PriorityQueue\n",
+        "  indices_consulta = []\n",
+        "  ranking = []\n",
         "  \n",
         "  for palavra in consulta.split(\" \"):\n",
         "    if palavra in indices.keys():\n",
         "        indices_consulta.append(indices[palavra])\n",
         "  \n",
         "  todos_os_indices = [item for sublista in indices_consulta for item in sublista]\n",
-        "  todos_os_indices.sort() # Sorted Array of all indexes from query terms\n",
+        "  todos_os_indices.sort()\n",
         "  \n",
         "  for i in range(len(todos_os_indices)):\n",
         "    score_documento = 0\n",
@@ -681,7 +681,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "99730eef-6783-4e26-9ee9-87019e3639bd"
+        "outputId": "9cfc2b83-a87a-49d0-b3bd-3ba5fb0a9279"
       },
       "source": [
         "# Criando e imprimindo a tabela com os dados dos documentos\n",
@@ -700,7 +700,7 @@
         "tabela_and.index += 1\n",
         "tabela_and"
       ],
-      "execution_count": 14,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -770,7 +770,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 15
         }
       ]
     },
@@ -793,7 +793,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "528e7884-1bf5-4493-ab98-ecbbfb5f49ac"
+        "outputId": "298afc9f-a371-4b74-ef11-5df11aa62eaf"
       },
       "source": [
         "consulta = \"governo quer investir educação\"\n",
@@ -816,7 +816,7 @@
         "tabela_q3.index += 1\n",
         "tabela_q3"
       ],
-      "execution_count": 15,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -905,7 +905,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 16
         }
       ]
     }
