Adicionando data.csv

--- a/Lab_04_RI.ipynb
+++ b/Lab_04_RI.ipynb
@@ -19,7 +19,7 @@
       "metadata": {
         "id": "ExL1mOdL3H4S",
         "colab_type": "code",
-        "outputId": "0441e4b1-654e-4895-802f-ab900a1f4e3a",
+        "outputId": "cc81c198-693c-428d-b8fe-1f84152b4dd4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 255
@@ -57,7 +57,7 @@
             "[nltk_data]   Unzipping stemmers/rslp.zip.\n",
             "Collecting memory_profiler\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/9f/fe/1fca7273dd111108f204a686b12a12b6422d405fe4614087aa7d5a66ea87/memory_profiler-0.55.0.tar.gz (40kB)\n",
-            "\u001b[K     |████████████████████████████████| 40kB 5.1MB/s \n",
+            "\u001b[K     |████████████████████████████████| 40kB 2.5MB/s \n",
             "\u001b[?25hRequirement already satisfied: psutil in /usr/local/lib/python3.6/dist-packages (from memory_profiler) (5.4.8)\n",
             "Building wheels for collected packages: memory-profiler\n",
             "  Building wheel for memory-profiler (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
@@ -195,7 +195,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 187
         },
-        "outputId": "51e61e09-c905-476f-c1c6-e2d6bc5fa27d"
+        "outputId": "bd7cb33b-0a96-4530-c1de-e761bb99cbe4"
       },
       "source": [
         "# Funcao que implementa a consulta documento-por-vez\n",
@@ -253,7 +253,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 187
         },
-        "outputId": "9b691217-65f0-4ad3-cb35-746b70d17547"
+        "outputId": "6e5f4d2e-7be9-4530-cce9-b3516ea9af05"
       },
       "source": [
         "# Funcao que implementa a consulta termo-por-vez    \n",
@@ -359,7 +359,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "8da8cbf3-e35b-4aea-df45-579e44907217"
+        "outputId": "af76e9e1-6d93-4b96-dac3-6f913d89c8c2"
       },
       "source": [
         "# Criando e imprimindo a tabela com os dados dos documentos\n",
@@ -474,7 +474,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "7a020733-e8a3-499e-b5d0-9864445fb67e"
+        "outputId": "2421a406-bd64-45c7-e5aa-b66d2faa48f9"
       },
       "source": [
         "# Comparando os tempos medios de de execucao\n",
@@ -516,28 +516,28 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>0.002077</td>\n",
+              "      <td>0.002582</td>\n",
               "      <td>0.000160</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>0.000437</td>\n",
-              "      <td>0.000031</td>\n",
+              "      <td>0.000498</td>\n",
+              "      <td>0.000032</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>0.000134</td>\n",
+              "      <td>0.000148</td>\n",
               "      <td>0.000007</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>0.000468</td>\n",
-              "      <td>0.000034</td>\n",
+              "      <td>0.000478</td>\n",
+              "      <td>0.000033</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>5</th>\n",
-              "      <td>0.001894</td>\n",
-              "      <td>0.000192</td>\n",
+              "      <td>0.002905</td>\n",
+              "      <td>0.000268</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -545,11 +545,11 @@
             ],
             "text/plain": [
               "   tempo_médio_documento_por_vez  tempo_médio_termo_por_vez\n",
-              "1                       0.002077                   0.000160\n",
-              "2                       0.000437                   0.000031\n",
-              "3                       0.000134                   0.000007\n",
-              "4                       0.000468                   0.000034\n",
-              "5                       0.001894                   0.000192"
+              "1                       0.002582                   0.000160\n",
+              "2                       0.000498                   0.000032\n",
+              "3                       0.000148                   0.000007\n",
+              "4                       0.000478                   0.000033\n",
+              "5                       0.002905                   0.000268"
             ]
           },
           "metadata": {
@@ -568,13 +568,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 102
         },
-        "outputId": "148ce1a4-e11d-4446-bdd4-cac87c88a14e"
+        "outputId": "9a4d4e89-614d-4975-ec98-847f848a5907"
       },
       "source": [
         "# Comparando o uso de memória\n",
         "\n",
         "print('Uso de memória em Documento Por Vez:')\n",
-        "%memit termoPorVez(consultas[0], indices, k)\n",
+        "%memit documentoPorVez(consultas[0], indices, k)\n",
         "print(' ')\n",
         "print('Uso de memória em Termo Por Vez:')\n",
         "%memit termoPorVez(consultas[0], indices, k)"
@@ -585,10 +585,10 @@
           "output_type": "stream",
           "text": [
             "Uso de memória em Documento Por Vez:\n",
-            "peak memory: 235.73 MiB, increment: 0.08 MiB\n",
+            "peak memory: 236.28 MiB, increment: 0.13 MiB\n",
             " \n",
             "Uso de memória em Termo Por Vez:\n",
-            "peak memory: 235.73 MiB, increment: 0.00 MiB\n"
+            "peak memory: 236.28 MiB, increment: 0.00 MiB\n"
           ],
           "name": "stdout"
         }
@@ -681,7 +681,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "9cfc2b83-a87a-49d0-b3bd-3ba5fb0a9279"
+        "outputId": "7166bdcb-5b9f-4342-e654-15e2624348ff"
       },
       "source": [
         "# Criando e imprimindo a tabela com os dados dos documentos\n",
@@ -700,7 +700,7 @@
         "tabela_and.index += 1\n",
         "tabela_and"
       ],
-      "execution_count": 15,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -770,7 +770,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 14
         }
       ]
     },
@@ -793,7 +793,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "298afc9f-a371-4b74-ef11-5df11aa62eaf"
+        "outputId": "72ca7564-b3a3-46f7-e2c4-f958b342371a"
       },
       "source": [
         "consulta = \"governo quer investir educação\"\n",
@@ -816,7 +816,7 @@
         "tabela_q3.index += 1\n",
         "tabela_q3"
       ],
-      "execution_count": 16,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -905,7 +905,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 15
         }
       ]
     }
